PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add ~<f11> ? d M-c~ binding to *list-coding-systems*
- Add support for *ibuffer-vc* and *ibuffer-tramp* external packages via the *pel-use-ibuffer-vc* and *pel-use-ibuffer-tramp* respectively.
  Added a ~<f12> <f2>~ key binding in the *ibuffer-mode* to access the PEL configuration to activate these.
  Also added access to the *ibuffer-vc* configuration via the ~<f12> <f3>~ key binding.
  And added the ~<f12> v~ binding to activate the VC based group and ~<f12> t~ for the tramp grouping.
  Inside ibuffers, added ~<f12> c~ binding to *ibuffer-filter-chosen-by-completion* and
  ~<f12> d~ binding to *ibuffer-filter-by-directory* .
- Add PEL extensions support for AWK when the *pel-use-awk* user-option is set to *t*.
  - The ~<f12>~ key is supported.  The [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-awk.pdf][𝕻𝔩 - AWK]] PDF describes the key bindings.
- Add a new PDF for *rpm-archive* and *rpm-spec-mode* mode.
  This supports the ~<f11> SPC M-R <f1>~, ~<f11> SPC M-R <f2>~ and ~<f11> SPC M-R <f3>~ to access the PDF and the
  customization groups, but not the corresponding <f12> key bindings yet.
- Add new binding to display the complete information about current point: ~<f11> ? d P~ is now bound to the
  new *pel-what-cursor-position* command which simply invokes *what-cursor-position* with  a non-nil argument.
- Add preliminary PEL AWK support, activated by the *pel-use-awk* user-option.
- Add early support for the *x509-mode* that decodes various X.509 file format with openSSL.
  PEL support is minimal: activated by the *pel-use-x509-mode* user-option, auto-loading of *x509-dwim*
  and a new PDF page: [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/x509.pdf][Ɱ X.509 Certificates]].
- Add support for a Perl REPL via the perl-repl package.